--- a/app.json
+++ b/app.json
@@ -829,6 +829,43 @@
     },
     {
       "images": {
+        "large": "/drivers/dehumidifier/assets/images/large.png",
+        "small": "/drivers/dehumidifier/assets/images/small.png"
+      },
+      "icon": "/drivers/dehumidifier/assets/icon.svg",
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "cloud"
+      ],
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "name": {
+        "en": "Dehumidifier"
+      },
+      "class": "other",
+      "capabilities": [
+        "measure_humidity",
+        "measure_temperature",
+        "onoff",
+        "target_humidity"
+      ],
+      "id": "dehumidifier"
+    },
+    {
+      "images": {
         "large": "/drivers/heater/assets/images/large.png",
         "small": "/drivers/heater/assets/images/small.png"
       },
@@ -1391,6 +1428,80 @@
     }
   ],
   "capabilities": {
+    "target_humidity": {
+      "type": "enum",
+      "title": {
+        "en": "Target Humidity"
+      },
+      "desc": {
+        "en": "Target Humidity"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "picker",
+      "values": [
+        {
+          "id": "35",
+          "title": {
+            "en": "35 %"
+          }
+        },
+        {
+          "id": "40",
+          "title": {
+            "en": "40 %"
+          }
+        },
+        {
+          "id": "45",
+          "title": {
+            "en": "45 %"
+          }
+        },
+        {
+          "id": "50",
+          "title": {
+            "en": "50 %"
+          }
+        },
+        {
+          "id": "55",
+          "title": {
+            "en": "55 %"
+          }
+        },
+        {
+          "id": "60",
+          "title": {
+            "en": "60 %"
+          }
+        },
+        {
+          "id": "65",
+          "title": {
+            "en": "65 %"
+          }
+        },
+        {
+          "id": "70",
+          "title": {
+            "en": "70 %"
+          }
+        },
+        {
+          "id": "75",
+          "title": {
+            "en": "75 %"
+          }
+        },
+        {
+          "id": "80",
+          "title": {
+            "en": "80 %"
+          }
+        }
+      ]
+    },
     "thermostat_heater_mode": {
       "type": "enum",
       "title": {
