--- a/app.json
+++ b/app.json
@@ -860,10 +860,63 @@
         "measure_humidity",
         "measure_temperature",
         "onoff",
-        "target_humidity",
-        "fan_speed"
+        "dehumidifier_target_humidity",
+        "dehumidifier_fan_speed"
       ],
-      "id": "dehumidifier"
+      "id": "dehumidifier",
+      "settings": [
+        {
+          "id": "child_lock",
+          "type": "checkbox",
+          "label": {
+            "en": "Child lock"
+          },
+          "value": false
+        },
+        {
+          "id": "swing",
+          "type": "checkbox",
+          "label": {
+            "en": "Swing"
+          },
+          "value": false
+        },
+        {
+          "id": "Light_adjust",
+          "type": "dropdown",
+          "label": {
+            "en": "Light modes"
+          },
+          "values": [
+            {
+              "id": "1",
+              "label": {
+                "en": "Air humidity indication off"
+              }
+            },
+            {
+              "id": "2",
+              "label": {
+                "en": "All indications off"
+              }
+            },
+            {
+              "id": "3",
+              "label": {
+                "en": "All indications on"
+              }
+            }
+          ]
+        },
+        {
+          "id": "Beeper",
+          "type": "checkbox",
+          "label": {
+            "en": "Beep"
+          },
+          "value": false
+        }
+      ]
     },
     {
       "images": {
@@ -1429,7 +1482,7 @@
     }
   ],
   "capabilities": {
-    "fan_speed": {
+    "dehumidifier_fan_speed": {
       "type": "enum",
       "title": {
         "en": "Fan speed"
@@ -1467,7 +1520,7 @@
         }
       ]
     },
-    "target_humidity": {
+    "dehumidifier_target_humidity": {
       "type": "enum",
       "title": {
         "en": "Target Humidity"
