--- a/app.json
+++ b/app.json
@@ -862,7 +862,8 @@
         "onoff",
         "dehumidifier_target_humidity",
         "dehumidifier_fan_speed",
-        "dehumidifier_mode"
+        "dehumidifier_mode",
+        "dehumidifier_fault"
       ],
       "id": "dehumidifier",
       "settings": [
@@ -1621,6 +1622,63 @@
           "id": "auto",
           "title": {
             "en": "Auto"
+          }
+        }
+      ]
+    },
+    "dehumidifier_fault": {
+      "type": "enum",
+      "title": {
+        "en": "Dehumidifier fault"
+      },
+      "desc": {
+        "en": "Dehumidifier fault"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "/assets/error.svg",
+      "values": [
+        {
+          "id": "OK",
+          "title": {
+            "en": "OK"
+          }
+        },
+        {
+          "id": "C1",
+          "title": {
+            "en": "NTC thermistor fault"
+          }
+        },
+        {
+          "id": "C2",
+          "title": {
+            "en": "Temp/Hum sensor fault"
+          }
+        },
+        {
+          "id": "C8",
+          "title": {
+            "en": "Refrigerant leak"
+          }
+        },
+        {
+          "id": "P1",
+          "title": {
+            "en": "Auto defrost"
+          }
+        },
+        {
+          "id": "P2",
+          "title": {
+            "en": "Water tank full"
+          }
+        },
+        {
+          "id": "Unkown",
+          "title": {
+            "en": "Unknown fault"
           }
         }
       ]
