This makes it work with voice assistants

--- a/app.json
+++ b/app.json
@@ -880,7 +880,7 @@
       "name": {
         "en": "Dehumidifier"
       },
-      "class": "other",
+      "class": "thermostat",
       "capabilities": [
         "measure_humidity",
         "measure_temperature",
@@ -1756,6 +1756,7 @@
       },
       "getable": true,
       "setable": true,
+      "units": "%",
       "uiComponent": "picker",
       "values": [
         {
