--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
-  "id": "com.tuya.cloud",
+  "id": "com.tuya.cloud-dev",
   "sdk": 3,
   "name": {
-    "en": "Tuya cloud"
+    "en": "Tuya cloud dev"
   },
   "brandColor": "#FF4900",
   "description": {
@@ -1163,6 +1163,49 @@
       ],
       "deprecated": true,
       "id": "switch"
+    },
+    {
+      "images": {
+        "small": "/drivers/temphumimeter/assets/images/small.png",
+        "large": "/drivers/temphumimeter/assets/images/large.png",
+        "xlarge": "/drivers/temphumimeter/assets/images/xlarge.png"
+      },
+      "icon": "/drivers/temphumimeter/assets/icon.svg",
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "cloud"
+      ],
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "name": {
+        "en": "Temperature and Humidity sensor",
+        "nl": "Temperatuur en luchtvochtigheid sensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "measure_humidity",
+        "measure_temperature",
+        "measure_battery"
+      ],
+      "energy": {
+        "batteries": [
+          "AA"
+        ]
+      },
+      "id": "temphumimeter"
     },
     {
       "images": {
