--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
-  "id": "com.tuya.cloud-dev",
+  "id": "com.tuya.cloud",
   "sdk": 3,
   "name": {
-    "en": "Tuya cloud dev"
+    "en": "Tuya cloud"
   },
   "brandColor": "#FF4900",
   "description": {
